# DoodleMe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh  setup_wizard.py
packaging/debian/: changelog  control  rules
ros2_ws/src/doodle_agent/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/doodle_agent/doodle_agent/: __init__.py  agent.py
ros2_ws/src/doodle_agent/doodle_agent/prompts/: __init__.py  system_prompt.py
ros2_ws/src/doodle_agent/doodle_agent/session/: __init__.py  session_manager.py
ros2_ws/src/doodle_agent/doodle_agent/tools/: __init__.py  bom_tool.py  kicad_tool.py  openscad_tool.py  urdf_tool.py  wiring_tool.py
ros2_ws/src/doodle_agent/test/: conftest.py  test_agent.py  test_tools.py
ros2_ws/src/doodle_description/: CMakeLists.txt  package.xml
ros2_ws/src/doodle_description/launch/: display.launch.py
ros2_ws/src/doodle_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/doodle_msgs/msg/: AgentRequest.msg  AgentResponse.msg  DesignState.msg
ros2_ws/src/rqt_doodle/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
ros2_ws/src/rqt_doodle/rqt_doodle/: __init__.py  plugin.py
ros2_ws/src/rqt_doodle/rqt_doodle/assets/themes/: dark.qss
ros2_ws/src/rqt_doodle/rqt_doodle/config/: __init__.py  settings.py
ros2_ws/src/rqt_doodle/rqt_doodle/panels/: __init__.py  bom_panel.py  chat_panel.py  viewer_panel.py  wiring_panel.py
ros2_ws/src/rqt_doodle/rqt_doodle/ros2/: __init__.py  gazebo_bridge.py  urdf_publisher.py
ros2_ws/src/rqt_doodle/rqt_doodle/widgets/: __init__.py  settings_dialog.py  status_bar.py
secrets/: .gitkeep
