<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doodle_agent</name>
  <version>0.1.0</version>
  <description>
    DoodleMe AI agent — wraps the Anthropic Claude API with tool use for
    OpenSCAD generation, URDF authoring, BOM management, wiring diagrams,
    and KiCad schematic export.
  </description>
  <maintainer email="myemail.rohan@gmail.com">Rohan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>python3-anthropic</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-lxml</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
</package>
